IDP-1472 - Police invalid attribute names in transcoders
https://issues.shibboleth.net/jira/browse/IDP-1472